# android_hardware_qcom_gps

./: Makefile.am  configure.ac  loc_api.pc.in
core/: ContextBase.cpp  LBSProxyBase.h  LocAdapterBase.cpp  LocAdapterBase.h  LocApiBase.cpp  LocApiBase.h  UlpProxyBase.h  gps_extended_c.h
etc/: gps.conf
gnss-test/: Makefile.am  configure.ac  gnss-test.pc.in  gnss_test.cpp
loc_api/: Android.mk  Makefile.am
loc_api/libloc_api/: loc_eng.cpp
loc_api/libloc_api-rpc-50001/libloc_api-rpc-glue/rpc_inc/: LocApiRpcAdapter.h  debug.h  loc_api_fixup.h  loc_api_rpc_glue.h
loc_api/libloc_api-rpc-50001/libloc_api-rpc-glue/src/: LocApiRpc.cpp  LocApiRpcAdapter.cpp  loc_api_log.c  loc_api_rpc_glue.c  loc_api_sync_call.c
loc_api/libloc_api-rpc-50001/libloc_api-rpc-stub/xdr/: loc_api_common.xdr
loc_api/libloc_api_50001/: Android.mk  LocApiAdapter.cpp  LocApiAdapter.h  LocEngAdapter.cpp  LocEngAdapter.h  Makefile.am  gps.c  loc.cpp  loc.h  loc_eng.cpp  loc_eng.h  loc_eng_agps.cpp  loc_eng_agps.h  loc_eng_dmn_conn.cpp  loc_eng_dmn_conn.h  loc_eng_dmn_conn_glue_msg.c  loc_eng_dmn_conn_glue_pipe.c  loc_eng_dmn_conn_handler.cpp  loc_eng_dmn_conn_handler.h  loc_eng_dmn_conn_thread_helper.c  loc_eng_log.cpp  loc_eng_log.h  loc_eng_msg.cpp  loc_eng_msg.h  loc_eng_msg_id.h  loc_eng_ni.cpp  loc_eng_nmea.cpp  loc_eng_xtra.cpp  loc_gnss.cpp  loc_gnss.h
loc_api/loc_api_v02/: Android.mk  LocApiV02Adapter.cpp  LocApiV02Adapter.h  Makefile.am  loc_api_sync_req.c  loc_api_sync_req.h  loc_api_v02_client.c  loc_api_v02_client.h  loc_api_v02_log.c  loc_util_log.h  location_service_v02.c  location_service_v02.h
loc_api/ulp/inc/: ulp.h
loc_api/utils/: loc_dbg.h  loc_log.cpp
platform_lib_abstractions/: elapsed_millis_since_boot.cpp  platform_lib_includes.h  platform_lib_macros.h  platform_lib_time.h
utils/: Android.mk  Makefile.am  der2pem.c  linked_list.c  loc_cfg.cpp  loc_cfg.h  loc_log.cpp  loc_target.cpp  loc_target.h  log_util.h  msg_q.c
